--- a/lwjgl/pom.xml
+++ b/lwjgl/pom.xml
@@ -16,6 +16,7 @@
 		<maven.compiler.target>9</maven.compiler.target>
 		<lwjgl.version>3.1.3</lwjgl.version>
 		<joml.version>1.9.4</joml.version>
+		<pngdecoder.version>1.0</pngdecoder.version>
 	</properties>
 
 	<dependencies>
@@ -40,9 +41,9 @@
 			<version>${lwjgl.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.lwjgl</groupId>
-			<artifactId>lwjgl-stb</artifactId>
-			<version>${lwjgl.version}</version>
+			<groupId>org.l33tlabs.twl</groupId>
+			<artifactId>pngdecoder</artifactId>
+			<version>${pngdecoder.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.lwjgl</groupId>
@@ -68,13 +69,6 @@
 		<dependency>
 			<groupId>org.lwjgl</groupId>
 			<artifactId>lwjgl-opengl</artifactId>
-			<version>${lwjgl.version}</version>
-			<classifier>${lwjgl.natives}</classifier>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.lwjgl</groupId>
-			<artifactId>lwjgl-stb</artifactId>
 			<version>${lwjgl.version}</version>
 			<classifier>${lwjgl.natives}</classifier>
 			<scope>runtime</scope>
